Tried various changes in pom files none successful
Various updates have been made to root, core and ui pom files
maven still does not function properly